--- a/Assignment 3/Assign3-1/build.gradle
+++ b/Assignment 3/Assign3-1/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'java'
 
 description = "Client Server Socket Example"
-sourceCompatibility = '21'
-targetCompatibility = '21'
+//sourceCompatibility = '21'
+//targetCompatibility = '21'
 
 repositories {
   mavenCentral()
